--- a/es/makefile
+++ b/es/makefile
@@ -6,6 +6,4 @@ HEADER:
 	sh navega.sh
 
 FOOTER:
-	for i in *.html; do
-	sed -i -e '/<!-- BEGIN FOOTER -->/r ../footer.html' -e '/<!-- BEGIN FOOTER -->/,/<!-- END FOOTER -->/d' "$i"
-	done
+	sh footer.sh
