Restituyo link de Redes de la Comunidad Bayesiana

--- a/img/makefile
+++ b/img/makefile
@@ -1,5 +1,11 @@
-gimena-crop.jpg:
-	convert gimena.jpg -crop 1472x1472+0+200 gimena-crop.jpg
+all: papers-es.jpg whipalaNico.jpeg
+
+papers-es.jpg:
+	wget https://raw.githubusercontent.com/BayesPlurinacional/static/main/figuras/papers-es.jpg
+	wget https://raw.githubusercontent.com/BayesPlurinacional/static/main/figuras/papers-en.jpg
+
+whipalaNico.jpeg:
+	wget https://raw.githubusercontent.com/glandfried/images/master/whipalaNico.jpeg
 
 ariel-crop.jpg:
 	convert ariel.jpg -crop 991x991+0+140 ariel-crop.jpg
