--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "livePreview.defaultPreviewPath": "/_pages/es/2025/index.html"
+  "livePreview.defaultPreviewPath": "/_pages/en/2025/index.html"
 }
